<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>
    <string name="channel_name">Downloads</string>

    <string name="button_name">Download</string>
    <string name="button_ok">OK</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="project">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="file_name">File Name</string>
    <string name="download_status">Status</string>

    <string name="bundle_extra">details_bundle</string>
    <string name="file_extra">download_file</string>
    <string name="status_extra">download_status</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="toast_no_internet">There is no internet connection</string>
    <string name="toast_download_paused">There download was paused</string>
    <string name="select_option">Please select a file to download</string>


</resources>
